--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,11 +2,19 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: 
+      - main
+      - dev
+      - dev make
+      - codeql
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main, dev ]
-  
+    branches:
+      - main
+      - dev
+      - dev make
+      - codeql
+      
 jobs:
   analyze:
     name: Analyze
