--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -27,9 +27,9 @@ jobs:
       run: docker build . --file Dockerfile --tag gitdocker:latest
     - name: Build the project
       run: docker run --rm gitdocker:latest
-    - name: Run Make
-      run: make -j8 all
-      working-directory: /github/workspace/Build/
+    #- name: Run Make
+      #run: make -j8 all
+      #working-directory: /github/workspace/Build/
       
     #- name: Find all Hex files and fail if found
       #uses: DovnarAlexander/github-action-file-detection@master
