--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -25,23 +25,23 @@ jobs:
     - name: Build the Docker image
       #run: docker build . --file Dockerfile --tag "${IMAGE_TAG}"
       run: docker build . --file Dockerfile --tag gitdocker:latest
-    - name: Build the project
-      run: docker run --rm gitdocker:latest
+    #- name: Build the project
+      #run: docker run --rm gitdocker:latest
     #- name: Run Make
       #run: make -j8 all
       #working-directory: /github/workspace/Build/
       
-    #- name: Find all Hex files and fail if found
-      #uses: DovnarAlexander/github-action-file-detection@master
-      #with:
-        #wildcard: '*.mk'
-        #base_path: '/'
+    - name: Find all Hex files and fail if found
+      uses: DovnarAlexander/github-action-file-detection@master
+      with:
+        wildcard: 'arm-none-eabi-gcc.exe'
+        base_path: '/'
         
     - name: Upload Elf and Hex file from Docker Image
       uses: actions/upload-artifact@v3
       with:
         name: BuildFiles
         path: |
-          /github/workspace/Build/*.hex
-          /github/workspace/Build/*.elf
+          /Build/*.hex
+          /Build/*.elf
         retention-days: 1
