--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build the Docker image
       #run: docker build . --file Dockerfile --tag "${IMAGE_TAG}"
       run: docker build . --file Dockerfile --tag gitdocker:latest
-    #- name: Build the project
-      #run: docker run --rm gitdocker:latest
+    - name: Build the project
+      run: docker run --rm gitdocker:latest
     #- name: Run Make
       #run: make -j8 all
       #working-directory: /github/workspace/Build/
