--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Find all Hex files and fail if found
       uses: DovnarAlexander/github-action-file-detection@master
       with:
-        wildcard: '/*.exe'
+        wildcard: '*.exe'
         base_path: '/'
         
     - name: Upload Elf and Hex file from Docker Image
