--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -11,8 +11,9 @@ on:
       - 'dev'
       
 # Define the image tag
-#env:
+env:
   #IMAGE_TAG: jamiehollandimi/myimagename:latest
+  DOCKER_IMAGE: gitdocker:latest
 
 jobs:
   build:
@@ -22,9 +23,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Build the Docker image
       #run: docker build . --file Dockerfile --tag "${IMAGE_TAG}"
-      run: docker build . --file Dockerfile --tag gitdocker:latest
+      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
     - name: Build the project
-      run: docker run # --rm gitdocker:latest
+      run: docker run -td $DOCKER_IMAGE
     #- name: Run Make
       #run: make -j8 all
       #working-directory: /github/workspace/Build/
@@ -44,4 +45,4 @@ jobs:
           #/Build/*.elf
         #retention-days: 1
     - name: Removes the Docker Container
-      run: docker --rm gitdocker:latest
+      run: docker --rm $DOCKER_IMAGE
