--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -23,7 +23,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Build the Docker image
       #run: docker build . --file Dockerfile --tag "${IMAGE_TAG}"
-      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
+      run: |
+        docker build . --file Dockerfile --tag $DOCKER_IMAGE
+        docker cp -r $DOCKER_IMAGE:/home/dev/Build /Build
     #- name: Build the project
       #run: docker run -td $DOCKER_IMAGE
     #- name: Run Make
@@ -44,5 +46,5 @@ jobs:
           #/Build/*.hex
           #/Build/*.elf
         #retention-days: 1
-    - name: Builds and Removes the Docker Container
+    - name: Removes the Docker Container
       run: docker run --rm $DOCKER_IMAGE
