--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -12,8 +12,7 @@ on:
       
 # Define the image tag
 env:
-  #IMAGE_TAG: jamiehollandimi/myimagename:latest
-  DOCKER_IMAGE: gitdocker:latest
+  DOCKER_IMAGE: jamiehollandimi/gitdocker:latest
 
 jobs:
   build:
@@ -28,13 +27,13 @@ jobs:
         image: $DOCKER_IMAGE
         run: |
           echo "::set-output name=docker-version::`echo $DOCKER_VERSION`"
+          echo arm-none-eabi-gcc --version
     - name: Build the Docker image
-      #run: docker build . --file Dockerfile --tag "${IMAGE_TAG}"
       run: |
         docker build . --file Dockerfile --tag $DOCKER_IMAGE
-        echo "docker run -t -i --privileged $DOCKER_IMAGE"
-        echo "arm-none-eabi-gcc --version"
-        echo "docker cp $DOCKER_IMAGE:/home/dev/Build /Build"
+        echo docker run -t -i --privileged $DOCKER_IMAGE
+        echo arm-none-eabi-gcc --version
+        echo docker cp $DOCKER_IMAGE:/home/dev/Build /Build
     #- name: Build the project
       #run: docker run -td $DOCKER_IMAGE
     #- name: Run Make
