--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -22,13 +22,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
+      run: sudo docker build . -t --file Dockerfile --tag $DOCKER_IMAGE
         
     - name: Build the project
       run: | 
-        docker run -t -i --privileged $DOCKER_IMAGE
-        arm-none-eabi-gcc --version
-        docker cp $DOCKER_IMAGE:/home/dev/Build /Build
+        sudo docker run -t -i --privileged $DOCKER_IMAGE
+        sudo arm-none-eabi-gcc --version
+        sudo docker cp $DOCKER_IMAGE:/home/dev/Build /Build
 
     #- name: Run Make
       #run: make -j8 all
