--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: sudo docker build . -t --file Dockerfile --tag $DOCKER_IMAGE
+      run: sudo docker build . --file Dockerfile --tag $DOCKER_IMAGE
         
     - name: Build the project
       run: | 
