--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -24,10 +24,10 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
         
-    - name: Build the project
-      run: | 
-        docker run $DOCKER_IMAGE
-        docker cp $DOCKER_IMAGE:/home/dev/Build /Build
+    - name: Build the Docker container
+      run: docker run $DOCKER_IMAGE
+        
+    #docker cp $DOCKER_IMAGE:/home/dev/Build /Build
 
     #- name: Run Make
       #run: make -j8 all
