--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -25,7 +25,7 @@ jobs:
       run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
         
     - name: Build the Docker container
-      run: docker run $DOCKER_IMAGE
+      run: docker run -d $DOCKER_IMAGE
         
     #docker cp $DOCKER_IMAGE:/home/dev/Build /Build
 
