--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -25,7 +25,8 @@ jobs:
       run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
         
     - name: Build the Docker container
-      run: docker run -d $DOCKER_IMAGE
+      run: docker run --rm -it --privileged -v $DOCKER_IMAGE
+      #run: docker run -d $DOCKER_IMAGE
         
     #docker cp $DOCKER_IMAGE:/home/dev/Build /Build
 
@@ -49,4 +50,4 @@ jobs:
         #retention-days: 1
         
     - name: Removes the Docker Container
-      run: docker run --rm $DOCKER_IMAGE
+      run: docker -rm -f $DOCKER_IMAGE
