--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -48,5 +48,5 @@ jobs:
           #/Build/*.elf
         #retention-days: 1
         
-    - name: Removes the Docker Container
-      run: docker -rm $DOCKER_IMAGE
+    #- name: Removes the Docker Container
+      #run: docker -rm $DOCKER_IMAGE
