--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -32,7 +32,7 @@ jobs:
       id: extract
       with:
         image: $DOCKER_IMAGE
-        path: Build/stm32_executable.hex
+        path: stm32_executable.hex
     - name: Upload Elf and Hex file from Docker Image
       uses: actions/upload-artifact@v3
       with:
