--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -49,11 +49,13 @@ jobs:
           #/Build/*.elf
         #retention-days: 1
         
-    #- name: Find all Hex files and fail if found
-      #uses: DovnarAlexander/github-action-file-detection@master
-      #with:
-        #wildcard: '*.hex'
-        #base_path: '/'     
+    - name: Find all Hex files and fail if found
+      uses: DovnarAlexander/github-action-file-detection@master
+      with:
+        wildcard: '*.elf'
+        exit_code_found: 1
+        exit_code_not_found: 0
+        base_path: '/'     
         
     #- name: Removes the Docker Container
       #run: docker --rm $DOCKER_IMAGE
