--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -55,7 +55,7 @@ jobs:
         wildcard: '*.elf'
         exit_code_found: 1
         exit_code_not_found: 0
-        base_path: '/'     
+        base_path: './'     
         
     #- name: Removes the Docker Container
       #run: docker --rm $DOCKER_IMAGE
