--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: shrink/actions-docker-extract@v2
       with:
         image: $DOCKER_IMAGE
-        path: "/Build/."
+        path: "Build/."
     #- name: Extract files from Docker Image
       #uses: shrink/actions-docker-extract@v2
       #id: extract
