--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -26,16 +26,13 @@ jobs:
         
     - name: Build the Docker container
       run: docker run --rm $DOCKER_IMAGE
-    - uses: shrink/actions-docker-extract@v2
-      with:
-        image: $DOCKER_IMAGE
-        path: "Build/stm32_executable.elf"
+      
     #- name: Extract files from Docker Image
       #uses: shrink/actions-docker-extract@v2
       #id: extract
       #with:
         #image: $DOCKER_IMAGE
-        #path: stm32_executable.hex
+        #path: "Build/stm32_executable.elf"
     #- name: Upload Elf and Hex file from Docker Image
       #uses: actions/upload-artifact@v3
       #with:
@@ -52,13 +49,14 @@ jobs:
           #/Build/*.elf
         #retention-days: 1
         
-    #- name: Find all Hex files and fail if found
-      #uses: DovnarAlexander/github-action-file-detection@master
-      #with:
-        #wildcard: '*.elf'
-        #exit_code_found: 1
-        #exit_code_not_found: 0
-        #base_path: './'     
+    - name: Find all Hex files and fail if found
+      uses: DovnarAlexander/github-action-file-detection@master
+      with:
+        image: $DOCKER_IMAGE
+        wildcard: '*.elf'
+        exit_code_found: 1
+        exit_code_not_found: 0
+        base_path: './'     
         
     #- name: Removes the Docker Container
       #run: docker --rm $DOCKER_IMAGE
