--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -11,8 +11,9 @@ on:
       - 'dev'
       
 # Define the image tag
+# ${{ github.repository }} repository name
 env:
-  DOCKER_IMAGE: ${{ github.actor }}/${{ github.repository }}:latest
+  DOCKER_IMAGE: ${{ github.actor }}/tutorial:latest
 
 jobs:
   build:
