--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -13,6 +13,7 @@ on:
 # Define the image tag
 # ${{ github.repository }} repository name
 env:
+  REGISTRY: ghcr.io
   DOCKER_IMAGE: ${{ github.actor }}/tutorial:latest
 
 jobs:
@@ -26,17 +27,17 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/$DOCKER_IMAGE
+      run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     - name: run ls
       run: ls
     - name: Build the Docker container
-      run: docker run --rm ghcr.io/$DOCKER_IMAGE
+      run: docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       
     #- name: Extract files from Docker Image
       #uses: shrink/actions-docker-extract@v2
       #id: extract
       #with:
-        #image: $DOCKER_IMAGE
+        #image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         #path: "Build/stm32_executable.elf"
     #- name: Upload Elf and Hex file from Docker Image
       #uses: actions/upload-artifact@v3
@@ -55,7 +56,7 @@ jobs:
         #retention-days: 1
   build2:
     runs-on: ubuntu-latest
-    container: ghcr.io/$DOCKER_IMAGE
+    container: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     steps:
     - name: Find all Hex files and fail if found
       uses: DovnarAlexander/github-action-file-detection@master
