--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -24,11 +24,15 @@ jobs:
     steps:
     - name: checkout repository
       uses: actions/checkout@v3
-
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
-    - name: Build the Docker container
-      run: docker run -t docker.io/$DOCKER_IMAGE
+    - name: Build docker images
+      run: docker build -t local < Dockerfile
+    - name: Run tests
+      run: docker run -it -v $PWD:/srv -w/srv local make all
+  
+    #- name: Build the Docker image
+      #run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
+    #- name: Build the Docker container
+      #run: docker run -t docker.io/$DOCKER_IMAGE
       #run: docker run --rm $REGISTRY/$IMAGE_NAME
       
     - name: run ls
@@ -54,10 +58,10 @@ jobs:
           #/Build/*.hex
           #/Build/*.elf
         #retention-days: 1
-  build2:
-    runs-on: ubuntu-latest
-    container: docker.io/$DOCKER_IMAGE
-    steps:
+  #build2:
+    #runs-on: ubuntu-latest
+    #container: docker.io/$DOCKER_IMAGE
+    #steps:
     - name: Find all Hex files and fail if found
       uses: DovnarAlexander/github-action-file-detection@master
       with:
@@ -65,6 +69,5 @@ jobs:
         exit_code_found: 1
         exit_code_not_found: 0
         base_path: '/'     
-        
     #- name: Removes the Docker Container
       #run: docker --rm $DOCKER_IMAGE
