--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -24,17 +24,12 @@ jobs:
     steps:
     - name: checkout repository
       uses: actions/checkout@v3
-    - name: Build docker images
-      run: docker build -t local < Dockerfile
-    - name: Run tests
-      run: docker run -it -v $PWD:/srv -w/srv local make all
   
-    #- name: Build the Docker image
-      #run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
-    #- name: Build the Docker container
-      #run: docker run -t docker.io/$DOCKER_IMAGE
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
+    - name: Build the Docker container
+      run: docker run -t docker.io/$DOCKER_IMAGE
       #run: docker run --rm $REGISTRY/$IMAGE_NAME
-      
     - name: run ls
       run: ls    
     #- name: Extract files from Docker Image
@@ -42,14 +37,7 @@ jobs:
       #id: extract
       #with:
         #image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        #path: "Build/stm32_executable.elf"
-    #- name: Upload Elf and Hex file from Docker Image
-      #uses: actions/upload-artifact@v3
-      #with:
-        #name: BuildFiles
-        #path: ${{ steps.extract.outputs.destination }}
-        #retention-days: 1
-        
+        #path: "Build/stm32_executable.elf"        
     #- name: Upload Elf and Hex file from Docker Image
       #uses: actions/upload-artifact@v3
       #with:
@@ -58,16 +46,28 @@ jobs:
           #/Build/*.hex
           #/Build/*.elf
         #retention-days: 1
-  #build2:
-    #runs-on: ubuntu-latest
-    #container: docker.io/$DOCKER_IMAGE
-    #steps:
-    - name: Find all Hex files and fail if found
-      uses: DovnarAlexander/github-action-file-detection@master
-      with:
-        wildcard: '*.elf'
-        exit_code_found: 1
-        exit_code_not_found: 0
-        base_path: '/'     
+  compile:
+    name: Compile site assets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Run the build process with Docker
+        uses: addnab/docker-run-action@v3
+        with:
+            image: $DOCKER_IMAGE
+            options: -v ${{ github.workspace }}:/var/www
+            run: |
+              composer install
+              npm install
+      - name: run ls
+        run: ls 
+      - name: Find all Hex files and fail if found
+        uses: DovnarAlexander/github-action-file-detection@master
+        with:
+          wildcard: '*.elf'
+          exit_code_found: 1
+          exit_code_not_found: 0
+          base_path: '/'     
     #- name: Removes the Docker Container
       #run: docker --rm $DOCKER_IMAGE
