--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -31,7 +31,10 @@ jobs:
       run: docker run -t docker.io/$DOCKER_IMAGE
       #run: docker run --rm $REGISTRY/$IMAGE_NAME
     - name: run ls
-      run: ls    
+      run: ls
+    - name: run ls
+      run: ls
+      working-directory: ./Build
     #- name: Extract files from Docker Image
       #uses: shrink/actions-docker-extract@v2
       #id: extract
@@ -52,6 +55,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - uses: docker/build-push-action@v2
+        with:
+          tags: jamie-holland-imi/gitdocker:latest
+          push: false
       - name: Run the build process with Docker
         uses: addnab/docker-run-action@v3
         with:
