--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -9,7 +9,8 @@ on:
     branches:
       - 'main'
       - 'dev'
-      
+  workflow_dispatch:
+  
 # Define the image tag
 # ${{ github.repository }} repository name
 env:
