--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -65,7 +65,7 @@ jobs:
             run: |
               make
               ls
-              docker cp jamie-holland-imi/gitdocker:latest:/src/. stm32_executable.elf
+              #docker cp jamie-holland-imi/gitdocker:latest:/src/. stm32_executable.elf
               #copy -p stm32_executable.elf > "${{ runner.temp }}/build_files"
               
       - name: Run LS
